Correct z-index

--- a/edit-review/extended-filters/style/style.less
+++ b/edit-review/extended-filters/style/style.less
@@ -1368,6 +1368,7 @@ margin: 0 20px;
   visibility: hidden;
   position:relative;
   top:5px;
+  z-index:-1;
   &.active {
     visibility:visible;
   }
